# TFE-TEU-CODE

./: Ackermann.cpp  Ackermann.h  CMakeLists.txt  Quersummenfunktion
Ackermann/: main.cpp
BinarySearch/: Binary_Search.cpp  Binary_Search.h  CMakeLists.txt  test.cpp
Doctest/: CMakeLists.txt  funktion.cpp  header.hpp  main.cpp  test.cpp
Fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.h
K_Vorlage/: A1.cpp  A1.h  CMakeLists.txt  main.cpp  test.cpp
RomanNum/: CMakeLists.txt  test.cpp
W_4_bubb_array_ptr/: BS.cpp  BS.hpp  CMakeLists.txt  main.cpp
